Bug 15779 - [lno] ICE in stmt_ann, at tree-flow-inline.h:54
Summary: [lno] ICE in stmt_ann, at tree-flow-inline.h:54
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: lno
: P2 normal
Target Milestone: lno
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2004-06-02 15:54 UTC by Volker Reichelt
Modified: 2005-07-23 22:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Reichelt 2004-06-02 15:54:39 UTC
The following testcase ICEs when compiled with lno branch
using the command line "g++ -O -funroll-loops":

=================================
struct A
{
    ~A();
};

struct B
{
    B();
    A a;
};

void foo()
{
    B b[2];
}
=================================

The error message is:

bug.cc: In function `void foo()':
bug.cc:13: internal compiler error: in stmt_ann, at tree-flow-inline.h:54
Please submit a full bug report, [etc.]
Comment 2 GCC Commits 2004-06-08 15:44:29 UTC
Subject: Bug 15779

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	lno-branch
Changes by:	rakdver@gcc.gnu.org	2004-06-08 15:44:24

Modified files:
	gcc            : ChangeLog.lno tree-scalar-evolution.c 
	                 tree-ssa-loop-ivcanon.c 

Log message:
	PR tree-optimization/15779
	* tree-scalar-evolution.c (scev_initialize): Clean the nb_iterations
	field.
	* tree-ssa-loop-ivcanon.c (canonicalize_loop_induction_variables): Do
	not clean nb_iterations field.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.lno.diff?cvsroot=gcc&only_with_tag=lno-branch&r1=1.1.2.175&r2=1.1.2.176
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-scalar-evolution.c.diff?cvsroot=gcc&only_with_tag=lno-branch&r1=1.1.2.52&r2=1.1.2.53
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-ssa-loop-ivcanon.c.diff?cvsroot=gcc&only_with_tag=lno-branch&r1=1.1.2.10&r2=1.1.2.11