	PR tree-optimization/15779 	* tree-scalar-evolution.c (scev_initialize): Clean the nb_iterations 	field. 	* tree-ssa-loop-ivcanon.c (canonicalize_loop_induction_variables): Do 	not clean nb_iterations field.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lno-branch@82763 138bc75d-0d04-0410-961f-82ee72b054a4